# frankentui

./: .gitignore  .ubsignore  AGENTS.md  ANALYSIS_OF_SPEC_DOC_DIFFS.md  CHANGELOG.md  Cargo.toml  FIXES_SUMMARY.md  PLAN_TO_CREATE_FRANKENTUI__CODEX.md  PLAN_TO_CREATE_FRANKENTUI__OPUS.md  README.md  REVIEW_REPORT.md  REVIEW_REPORT_FINAL.md  SESSION_TODO.md  build-wasm.sh  frankentui_showcase_demo.html  repro_input_bugs.rs
crates/ftui-core/: Cargo.toml
crates/ftui-core/src/: capability_override.rs  event_coalescer.rs  glyph_policy.rs  inline_mode.rs  input_parser.rs  lib.rs  semantic_event.rs  terminal_capabilities.rs
crates/ftui-demo-showcase/: Cargo.toml
crates/ftui-demo-showcase/data/: NOTICE
crates/ftui-demo-showcase/src/: app.rs  assets.rs  chrome.rs  cli.rs  lib.rs  main.rs  theme.rs
crates/ftui-demo-showcase/src/screens/: action_timeline.rs  advanced_features.rs  advanced_text_editor.rs  agent_detail.rs  agent_tree.rs  async_tasks.rs  beads_overview.rs  code_explorer.rs  command_palette.rs  command_palette_lab.rs  convoy_panel.rs  dashboard.rs  data_viz.rs  event_feed.rs  explainability_cockpit.rs  file_browser.rs  form_validation.rs  forms_input.rs  i18n_demo.rs  inline_mode_story.rs  layout_inspector.rs  layout_lab.rs  log_search.rs  macro_recorder.rs  mail_inbox.rs  markdown_rich_text.rs  mermaid_mega_showcase.rs  mermaid_showcase.rs  mod.rs  mouse_playground.rs  performance.rs  performance_hud.rs  responsive_demo.rs  shakespeare.rs  snapshot_player.rs  terminal_capabilities.rs  theme_studio.rs  toast_events.rs  virtualized_search.rs  visual_effects.rs  (+2 more)
crates/ftui-demo-showcase/tests/: a11y_snapshots.rs  advanced_text_editor_ux_a11y.rs  async_tasks_stress.rs  backdrop_e2e.rs  golden_trace_corpus.rs  gt_screen_snapshots.rs  i18n_e2e.rs  inspector_stress.rs  layout_lab_e2e.rs  layout_lab_ux_a11y.rs  macro_recorder_determinism.rs  mermaid_showcase_pty.rs  mouse_playground_e2e.rs  mouse_playground_ux_a11y.rs  screen_snapshots.rs  snapshot_player_e2e.rs  snapshot_player_ux_a11y.rs  terminal_capabilities_ux_a11y.rs  virtualized_search_ux_a11y.rs  visual_effects_pty.rs
crates/ftui-demo-showcase/tests/golden/: vfx_doom-e1m1_120x40_16ms_seed42.checksums  vfx_mandelbrot_120x40_16ms_seed42.checksums  vfx_metaballs_120x40_16ms_seed42.checksums  vfx_plasma_120x40_16ms_seed42.checksums  vfx_quake-e1m1_120x40_16ms_seed42.checksums
crates/ftui-demo-showcase/tests/snapshots/: a11y_all_modes_dashboard_120x40.snap  a11y_all_modes_dashboard_80x24.snap  a11y_all_modes_data_viz_120x40.snap  a11y_all_modes_forms_input_120x40.snap  a11y_all_modes_shakespeare_80x24.snap  a11y_all_modes_tiny_40x10.snap  a11y_all_modes_wide_200x50.snap  a11y_all_modes_widget_gallery_120x40.snap  a11y_dashboard_screen_high_contrast_80x24.snap  a11y_dashboard_screen_reduced_motion_80x24.snap  (+230 more)
crates/ftui-extras/: Cargo.toml
crates/ftui-extras/benches/: plasma_bench.rs
crates/ftui-extras/src/: canvas.rs  charts.rs  clipboard.rs  console.rs  diagram.rs  export.rs  filepicker.rs  forms.rs  markdown.rs  mermaid.rs  mermaid_layout.rs  mermaid_minimap.rs  mermaid_render.rs  pty_capture.rs  syntax.rs  text_effects.rs  theme.rs
crates/ftui-extras/tests/: mermaid_fixtures.rs  proptest_mermaid_layout_invariants.proptest-regressions  proptest_mermaid_layout_invariants.rs  proptest_mermaid_parser_invariants.proptest-regressions  proptest_mermaid_render_invariants.proptest-regressions  proptest_mermaid_render_invariants.rs  rich_core_integration.rs  terminal_integration.rs  text_effects_snapshots.rs
crates/ftui-harness/: Cargo.toml
crates/ftui-harness/src/: asciicast.rs  determinism.rs  flicker_detection.rs  golden.rs  lib.rs  main.rs  pty_capture.rs  time_travel.rs  time_travel_inspector.rs  trace_replay.rs
crates/ftui-harness/tests/: capability_sim_e2e.rs  editor_snapshots.rs  golden_reflow.rs  golden_resize.rs  isomorphism_proofs.rs  render_flicker_integration.rs  render_headless_integration.rs  render_no_flicker_proof.rs  render_resize_storm_regression.rs  trace_replay.rs  widget_snapshots.rs
crates/ftui-layout/: Cargo.toml
crates/ftui-layout/src/: grid.rs  lib.rs  pane.rs  repro_max_constraint.rs  repro_space_around.rs
crates/ftui-layout/tests/: proptest_layout_invariants.rs
crates/ftui-pty/: Cargo.toml
crates/ftui-pty/src/: virtual_terminal.rs
crates/ftui-render/: Cargo.toml
crates/ftui-render/benches/: buffer_bench.rs  resize_storm_bench.rs
crates/ftui-render/src/: alloc_budget.rs  ansi.rs  budget.rs  buffer.rs  cell.rs  counting_writer.rs  diff.rs  diff_strategy.rs  drawing.rs  frame.rs  grapheme_pool.rs  headless.rs  lib.rs  link_registry.rs  presenter.rs  sanitize.rs  spatial_hit_index.rs  terminal_model.rs
crates/ftui-render/tests/: flicker_integration.rs  headless_integration.rs  no_flicker_proof.rs  repro_dirty_span.rs  repro_orphan_continuation.rs  resize_storm_regression.rs
crates/ftui-runtime/: Cargo.toml
crates/ftui-runtime/src/: allocation_budget.rs  bocpd.rs  conformal_alert.rs  debug_trace.rs  eprocess_throttle.rs  evidence_sink.rs  evidence_telemetry.rs  lib.rs  locale.rs  program.rs  render_thread.rs  resize_coalescer.rs  resize_sla.rs  simulator.rs  string_model.rs  subscription.rs  telemetry.rs  terminal_writer.rs  validation_pipeline.rs  voi_telemetry.rs  wasm_runner.rs
crates/ftui-runtime/tests/: mpc_vs_pi_evaluation.rs  proptest_statistical_invariants.rs  resize_migration_compat.rs
crates/ftui-showcase-wasm/: Cargo.toml
crates/ftui-showcase-wasm/src/: lib.rs  runner_core.rs  wasm.rs
crates/ftui-text/: Cargo.toml
crates/ftui-text/benches/: search_bench.rs
crates/ftui-text/src/: bidi.rs  editor.rs  markup.rs  rope.rs  segment.rs  text.rs  view.rs  width_cache.rs  wrap.rs
crates/ftui-text/tests/: unicode_width_corpus.rs
crates/ftui-tty/: Cargo.toml
crates/ftui-tty/src/: lib.rs
crates/ftui-web/: Cargo.toml
crates/ftui-web/src/: input_parser.rs  lib.rs  session_record.rs  step_program.rs
crates/gt-tui/: Cargo.toml  gt-cli-docs.json
crates/gt-tui/src/: app.rs  data.rs  main.rs  msg.rs  screen.rs  theme.rs  tmux_pane.rs
(+383 files in other folders)
