[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
  "crates/ftui",
  "crates/ftui-core",
  "crates/ftui-render",
  "crates/ftui-style",
  "crates/ftui-text",
  "crates/ftui-layout",
  "crates/ftui-runtime",
  "crates/ftui-widgets",
  "crates/ftui-extras",
  "crates/ftui-harness",
  "crates/ftui-i18n",
  "crates/ftui-pty",
  "crates/ftui-simd",
  "crates/ftui-demo-showcase",
  "crates/frankenterm-core",
  "crates/frankenterm-web",
  "crates/ftui-backend",
  "crates/ftui-tty",
  "crates/ftui-web",
  "crates/ftui-showcase-wasm",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# VFX-heavy crate: prefer speed over binary size so the rasterizer
# inner loops benefit from SIMD, loop unrolling, and aggressive inlining.
[profile.release.package.ftui-extras]
opt-level = 3
