[package]
name = "ftui-demo-showcase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ftui-core = { path = "../ftui-core" }
ftui-render = { path = "../ftui-render" }
ftui-style = { path = "../ftui-style" }
ftui-text = { path = "../ftui-text", features = ["markup"] }
ftui-layout = { path = "../ftui-layout" }
ftui-runtime = { path = "../ftui-runtime" }
ftui-widgets = { path = "../ftui-widgets" }
ftui-extras = { path = "../ftui-extras", features = [
    "canvas",
    "charts",
    "clipboard",
    "console",
    "export",
    "filesize",
    "filepicker",
    "forms",
    "image",
    "live",
    "logging",
    "markdown",
    "stopwatch",
    "syntax",
    "timer",
    "traceback",
] }
serde_json = "1"

[dev-dependencies]
ftui-harness = { path = "../ftui-harness" }
