[package]
name = "ftui-demo-showcase"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Demo showcase app and snapshots for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-demo-showcase"
readme = "../../README.md"

[dependencies]
ftui-core = { path = "../ftui-core", version = "0.1.1", features = ["caps-probe"] }
ftui-i18n = { path = "../ftui-i18n", version = "0.1.1" }
ftui-render = { path = "../ftui-render", version = "0.1.1" }
ftui-style = { path = "../ftui-style", version = "0.1.1", features = ["serde"] }
ftui-text = { path = "../ftui-text", version = "0.1.1", features = ["markup", "bidi"] }
ftui-layout = { path = "../ftui-layout", version = "0.1.1" }
ftui-runtime = { path = "../ftui-runtime", version = "0.1.1", features = ["tracing"] }
ftui-widgets = { path = "../ftui-widgets", version = "0.1.1", features = ["tracing"] }
tracing = "0.1.41"
ftui-extras = { path = "../ftui-extras", version = "0.1.1", features = [
    "canvas",
    "charts",
    "clipboard",
    "console",
    "doom",
    "quake",
    "export",
    "filesize",
    "filepicker",
    "forms",
    "image",
    "live",
    "logging",
    "markdown",
    "stopwatch",
    "syntax",
    "text-effects",
    "timer",
    "traceback",
    "theme",
    "visual-fx",
] }
serde_json = "1.0.145"
serde = { version = "1.0.227", features = ["derive"] }
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
web-time = "1.1.0"

[features]
debug-render = []
caps-probe = ["ftui-core/caps-probe"]
# Use the native ftui-tty backend instead of Crossterm.
native-backend = ["ftui-runtime/native-backend"]
# Legacy Crossterm backend (fallback when native-backend is disabled).
crossterm-compat = ["ftui-runtime/crossterm-compat"]
default = ["caps-probe", "native-backend"]
# Enable test-support to expose test infrastructure (locks, guards) to integration tests
test-support = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }

[dev-dependencies]
ftui-harness = { path = "../ftui-harness", version = "0.1.1" }
ftui-pty = { path = "../ftui-pty", version = "0.1.1" }
ftui-web = { path = "../ftui-web", version = "0.1.0" }
portable-pty = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["registry"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.7.0"
serial_test = "3.2"

[[bench]]
name = "action_timeline_bench"
harness = false

[[bench]]
name = "theme_studio_bench"
harness = false

[[bench]]
name = "perf_hud_bench"
harness = false
