[package]
name = "ftui-extras"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ftui-runtime = { path = "../ftui-runtime" }
ftui-widgets = { path = "../ftui-widgets", optional = true }
ftui-core = { path = "../ftui-core", optional = true }
ftui-render = { path = "../ftui-render", optional = true }
ftui-style = { path = "../ftui-style", optional = true }
ftui-text = { path = "../ftui-text", optional = true }
base64 = { version = "0.22.1", optional = true }
image = { version = "0.25.9", default-features = false, features = ["png", "gif", "jpeg"], optional = true }
pulldown-cmark = { version = "0.12", default-features = false, optional = true }
portable-pty = { version = "0.8.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
unicode-segmentation = { version = "1", optional = true }
unicode-width = { version = "0.2", optional = true }

[features]
canvas = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets"]
charts = ["canvas", "dep:unicode-width"]
clipboard = ["dep:base64", "dep:ftui-core"]
console = ["dep:ftui-render", "dep:ftui-style", "dep:ftui-text", "dep:unicode-segmentation", "dep:unicode-width"]
clipboard-fallback = ["clipboard"]
clipboard-logging = ["clipboard", "dep:tracing"]
image = ["dep:base64", "dep:ftui-core", "dep:image"]
markdown = ["dep:pulldown-cmark", "dep:ftui-render", "dep:ftui-style", "dep:ftui-text"]
export = ["dep:ftui-render"]
forms = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets", "dep:unicode-segmentation", "dep:unicode-width"]
pty-capture = ["dep:portable-pty", "dep:ftui-core"]
live = ["console"]
logging = ["console", "dep:tracing", "dep:tracing-subscriber"]
syntax = ["dep:ftui-render", "dep:ftui-style", "dep:ftui-text"]
filepicker = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-text", "dep:unicode-width"]
traceback = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:unicode-width"]
filesize = []
stopwatch = []
timer = []

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
