[package]
name = "ftui-harness"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Test harness and reference fixtures for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-harness"
readme = "../../README.md"

[features]
default = []
pty-capture = ["dep:portable-pty", "ftui-extras/pty-capture"]
telemetry = ["ftui-runtime/telemetry"]

[dependencies]
ftui-render = { path = "../ftui-render", version = "0.1.0" }
ftui-core = { path = "../ftui-core", version = "0.1.0" }
ftui-runtime = { path = "../ftui-runtime", version = "0.1.0" }
ftui-widgets = { path = "../ftui-widgets", version = "0.1.0" }
ftui-style = { path = "../ftui-style", version = "0.1.0" }
ftui-text = { path = "../ftui-text", version = "0.1.0", features = ["markup"] }
ftui-layout = { path = "../ftui-layout", version = "0.1.0" }
ftui-extras = { path = "../ftui-extras", version = "0.1.0", features = ["theme"] }
portable-pty = { version = "0.9.0", optional = true }
crossterm = "0.29.0"
serde_json = "1"

[dev-dependencies]
proptest = "1"
