[package]
name = "ftui-pty"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "PTY-backed test utilities for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-pty"
readme = "../../README.md"

[dependencies]
ftui-core = { path = "../ftui-core", version = "0.1.1", features = ["crossterm"] }
portable-pty = "0.9.0"
time = { version = "0.3.44", features = ["formatting"] }
