[package]
name = "ftui-render"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Render kernel: cells, buffers, diffs, and ANSI presentation."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-render"
readme = "../../README.md"

[features]
default = []
# Enable performance tracing spans
tracing = ["ftui-core/tracing", "dep:tracing"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }

[dependencies]
bitflags = "2.10.0"
memchr = "2.7.6"
smallvec = "1.15.1"
unicode-segmentation = "1.12.0"
ftui-core = { path = "../ftui-core", version = "0.1.1" }
tracing = { version = "0.1.41", optional = true }
# Note: ftui-render is the core kernel and should not depend on ftui-style.
# ftui-style depends on ftui-render (not vice versa).
# ftui-layout = { path = "../ftui-layout" }  # TODO: Add when needed
# ftui-text = { path = "../ftui-text" }      # TODO: Add when needed

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
ftui-core = { path = "../ftui-core", version = "0.1.1" }
proptest = "1.7.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[[bench]]
name = "cell_bench"
harness = false

[[bench]]
name = "buffer_bench"
harness = false

[[bench]]
name = "diff_bench"
harness = false

[[bench]]
name = "presenter_bench"
harness = false

[[bench]]
name = "double_buffer_bench"
harness = false

[[bench]]
name = "resize_storm_bench"
harness = false
