[package]
name = "ftui-showcase-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WASM showcase runner for FrankenTUI demo app."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ftui-web = { path = "../ftui-web", version = "0.1.0", features = ["input-parser"] }
ftui-demo-showcase = { path = "../ftui-demo-showcase", version = "0.1.1", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"

[dev-dependencies]
pretty_assertions = "1.4.1"

[package.metadata.wasm-pack.profile.release]
# -Oz: maximum size optimization
# --all-features: enable all wasm features (bulk-memory, etc.)
# --converge: re-run optimization passes until output stabilizes
wasm-opt = ["-Oz", "--all-features", "--converge"]
