[package]
name = "ftui-text"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
thread_local_cache = []
markup = ["dep:ftui-render"]
bidi = ["dep:unicode-bidi"]
normalization = ["dep:unicode-normalization"]

[dependencies]
ftui-layout = { path = "../ftui-layout" }
ftui-style = { path = "../ftui-style" }
ftui-render = { path = "../ftui-render", optional = true }
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
smallvec = "1.15.1"
tracing = "0.1"
lru = "0.12"
rustc-hash = "2"
ropey = "1.6"
unicode-bidi = { version = "0.3", optional = true }
unicode-normalization = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1"
tracing-test = "0.2"
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "width_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false
